--- a/September 2021.Rmd
+++ b/September 2021.Rmd
@@ -32,9 +32,9 @@ stops <- import("or_trip.xlsx")
 states <- st_as_sf(map("state", plot = FALSE, fill = TRUE, labels = T)) %>% 
   mutate(st_name = str_to_title(ID))
 
-states <- cbind(states, st_coordinates(st_centroid(states)))
-
-test <- st_centroid(states, of_largest_polygon = T)
+# states <- cbind(states, st_coordinates(st_centroid(states)))
+# 
+# test <- st_centroid(states, of_largest_polygon = T)
 
 #browseURL("https://r-spatial.org/r/2018/10/25/ggplot2-sf-2.html")
 
@@ -84,7 +84,7 @@ trip_map + trip_legend + plot_layout(widths = c(10, 0.5), heights = 10)
   scale_x_continuous(limits = c(-125, -90)) + 
   scale_y_continuous(limits = c(32, 50)) + 
   geom_sf(data = states, fill = NA, size = 0.25) + 
-  geom_text(data = states, aes(X, Y, label = st_name), size = 5) + 
+#  geom_text(data = states, aes(X, Y, label = st_name), size = 5) + 
   geom_segment(data = stops, aes(x = lon, y = lat, 
                     xend=c(tail(lon, n=-1), NA), 
                     yend=c(tail(lat, n=-1), NA)
@@ -103,18 +103,18 @@ crop_usa <- st_crop(usa, ymin = 32, ymax = 50,
 ggplot(crop_usa) + 
   geom_sf(fill = "white", color = "black", size = 0.05)
 
-elevation1 <- get_elev_raster(test, z = 8)
-
-plot(elevation1)
-
-crs(elevation1)
-
-elevation <- raster::crop(elevation1, extent(crop_usa))
-
-plot(elevation)
-
-test3 <- st_crop(test2, ymin = 32, ymax = 50, 
-                 xmin = -125, xmax = -90)
+# elevation1 <- get_elev_raster(test, z = 8)
+# 
+# plot(elevation1)
+# 
+# crs(elevation1)
+# 
+# elevation <- raster::crop(elevation1, extent(crop_usa))
+# 
+# plot(elevation)
+# 
+# test3 <- st_crop(test2, ymin = 32, ymax = 50, 
+#                  xmin = -125, xmax = -90)
 ```
 
 # 20210902 and 20210903 - Resume using {VisualResume}
@@ -487,6 +487,28 @@ p + geom_vline(xintercept = 2014, lty = 3) +
   annotate(geom = "label", x = 2012, y = 500, label = "What happened\n in 2014?") +
   geom_vline(xintercept = 2006, lty = 3) + 
   annotate(geom = "label", x = 2003, y = 75, label = "What happened\n in 2006?")
+```
+
+
+# 20210922 - Trying {glue} and {gluedown} again
+
+```{r, include = F}
+p_load(glue, gluedown)
+
+name <- "C"
+
+
+glue("My name starts with {name}.")
+
+head(mtcars) %>% 
+  glue_data("A {rownames(.)} has {hp} hp and gets {mpg} mpg.")
+
+
+```
+
+```{r, results = "asis"}
+md_text(head(mtcars) %>% 
+  glue_data("A {rownames(.)} has {hp} hp and gets {mpg} mpg."))
 ```
 
 
