Tidy Tuesday - Nurses

--- a/October 2021.Rmd
+++ b/October 2021.Rmd
@@ -84,18 +84,29 @@ wic_files <- c("https://www.fns.usda.gov/sites/default/files/resource-files/26wi
 wic_data <- reduce(map(wic_files, ~import(.)), bind_rows)
 ```
 
-# 20211005 - #TidyTuesday and 
+# 20211005 - #TidyTuesday and Registered Nurses
 
 ```{r}
-p_load(tidytuesdayR)
+p_load(tidytuesdayR, usmap)
 
-tt <- tt_load("2021-10-06")
+tt <- tt_load("2021-10-05")
+readme(tt)
+
+
+nurses <- tt$nurses %>% 
+  clean_names()
+
+skim(nurses)
 ```
 
 # 20211006 - Clean WIC data
 
 ```{r}
-
+plot_usmap(regions = "states", data = nurses, values = "hourly_wage_avg") + 
+  scale_fill_paletteer_c("harrypotter::ravenclaw") + 
+  labs(fill =  "Mean Hourly Wage ($)") + 
+  theme(legend.position = "right")
+  
 ```
 
 # Ideas
