--- a/October 2021.Rmd
+++ b/October 2021.Rmd
@@ -106,7 +106,9 @@ skim(nurses)
 plot_usmap(regions = "states", data = nurses, values = "hourly_wage_avg") + 
   scale_fill_paletteer_c("harrypotter::ravenclaw") + 
   labs(fill =  "Mean Hourly Wage ($)") + 
-  theme(legend.position = "right")
+  theme(legend.position = c(0.85, 0.02)) +
+  facet_wrap(~year)
+
 
   
 ```
