--- a/r_Rmd/October 2021.Rmd
+++ b/r_Rmd/October 2021.Rmd
@@ -300,6 +300,140 @@ fish_sum %>%
 ```
 
 
+
+# 20211013 - More {tidymodels} - [{recipes}](https://www.tidymodels.org/start/recipes/)
+
+```{r, include = FALSE}
+p_load(nycflights13)
+
+set.seed(123)
+
+flight_data <- 
+  flights %>% 
+  mutate(
+    # Convert the arrival delay to a factor
+    arr_delay = ifelse(arr_delay >= 30, "late", "on_time"),
+    arr_delay = factor(arr_delay),
+    # We will use the date (not date-time) in the recipe below
+    date = lubridate::as_date(time_hour)
+  ) %>% 
+  # Include the weather data
+  inner_join(weather, by = c("origin", "time_hour")) %>% 
+  # Only retain the specific columns we will use
+  select(dep_time, flight, origin, dest, air_time, distance, 
+         carrier, date, arr_delay, time_hour) %>% 
+  # Exclude missing data
+  na.omit() %>% 
+  # For creating models, it is better to have qualitative columns
+  # encoded as factors (instead of character strings)
+  mutate_if(is.character, as.factor)
+
+flight_data %>% 
+  count(arr_delay) %>% 
+  mutate(prop = n/sum(n))
+
+```
+
+```{r, include = FALSE}
+
+set.seed(222)
+# Put 3/4 of the data into the training set 
+data_split <- initial_split(flight_data, prop = 3/4)
+
+# Create data frames for the two sets:
+train_data <- training(data_split)
+test_data  <- testing(data_split)
+
+```
+
+```{r, include = FALSE}
+flights_rec <- 
+  recipe(arr_delay ~ ., data = train_data)  %>%  # set model formula and data set
+  update_role(flight, time_hour, new_role = "ID")  # update flight and time hour so they won't be used in models
+
+summary(flights_rec)
+
+flights_rec <- 
+  recipe(arr_delay ~ ., data = train_data) %>% 
+  update_role(flight, time_hour, new_role = "ID") %>% 
+  step_date(date, features = c("dow", "month")) %>%  # gets day of week and the month
+  step_holiday(date, 
+               holidays = timeDate::listHolidays("US"),  # adds holidays
+               keep_original_cols = FALSE) %>% 
+  step_dummy(all_nominal_predictors())  # make dummy variables
+
+
+# looking if any dest are only in train_data
+test_data %>% 
+  distinct(dest) %>% 
+  anti_join(train_data)
+
+flights_rec <- 
+  recipe(arr_delay ~ ., data = train_data) %>% 
+  update_role(flight, time_hour, new_role = "ID") %>% 
+  step_date(date, features = c("dow", "month")) %>%               
+  step_holiday(date, 
+               holidays = timeDate::listHolidays("US"), 
+               keep_original_cols = FALSE) %>% 
+  step_dummy(all_nominal_predictors()) %>% 
+  step_zv(all_predictors()) # removes zero variance columns (like LEX), ONLY PUT AFTER step_dummy()
+
+```
+
+
+
+```{r, include = FALSE}
+
+# build model specification
+
+lr_mod <- logistic_reg() %>% 
+  set_engine("glm")
+
+
+# build workflow
+flights_wflow <- 
+  workflow() %>% 
+  add_model(lr_mod) %>% 
+  add_recipe(flights_rec)
+
+flights_wflow
+
+# fit on training data
+
+flights_fit <- 
+  flights_wflow %>% 
+  fit(data = train_data)
+
+
+# extract model info
+
+# flights_fit %>% 
+#   extract_fit_parsnip() %>% 
+#   tidy()
+
+
+# predict arrival of test_data based on training_data
+
+flights_aug <- 
+  augment(flights_fit, test_data)
+```
+
+```{r}
+# ROC from {yardstick} (included in tidymodels)
+
+flights_aug %>% 
+  roc_curve(truth = arr_delay, .pred_late) %>% 
+  autoplot()
+
+flights_aug %>% 
+  roc_auc(truth = arr_delay, .pred_late)
+
+```
+
+Not too bad! We leave it to the reader to test out this workflow without this recipe. You can use `workflows::add_formula(arr_delay ~ .)` instead of `add_recipe()` (remember to remove the identification variables first!), and see whether our recipe improved our model’s ability to predict late arrivals.
+
+`remove_formula`
+
 # Ideas
 
 template, tidymodels, rprojroot, rgbif, geoviz, ggmap, rayvista, camcorder, {renv}, {rayvertex}, {labelled}, {hrbrthemes}, {firatheme}, {pwr}, voronoi, {reprex}, {ggdag}, debug = T for geom_text, {lcmm}, {rolldown}, {ggperiodic}, {codebook}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}
