--- a/r_Rmd/October 2021.Rmd
+++ b/r_Rmd/October 2021.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 
-pacman::p_load(pacman, tidyverse, janitor, here, rio, job, skimr, paletteer)
+pacman::p_load(pacman, tidyverse, janitor, here, rio, job, skimr, paletteer, crsp)
 
 theme_set(theme_bw(base_size = 15))
 
@@ -433,6 +433,116 @@ flights_aug %>%
 Not too bad! We leave it to the reader to test out this workflow without this recipe. You can use `workflows::add_formula(arr_delay ~ .)` instead of `add_recipe()` (remember to remove the identification variables first!), and see whether our recipe improved our model’s ability to predict late arrivals.
 
 `remove_formula`
+
+# 20211014 - More {tidymodels} - [{resampling}](https://www.tidymodels.org/start/resampling/)
+
+```{r cell-data-setup, include = FALSE}
+p_load(tidymodels, modeldata, ranger)
+
+data(cells, package = "modeldata")
+
+cells %>% 
+  count(class) %>% 
+  mutate(prop = n/sum(n))
+
+set.seed(123)
+
+cell_split <- initial_split(cells %>% select(-case), 
+                            strata = class)  # so that WS and PS have same proportion in splits
+
+cell_train <- training(cell_split)
+cell_test  <- testing(cell_split)
+
+nrow(cell_train)
+
+nrow(cell_train)/nrow(cells)
+
+
+# training set proportions by class
+cell_train %>% 
+  count(class) %>% 
+  mutate(prop = n/sum(n))
+
+# test set proportions by class
+cell_test %>% 
+  count(class) %>% 
+  mutate(prop = n/sum(n))
+
+
+rf_mod <- 
+  rand_forest(trees = 1000) %>% 
+  set_engine("ranger") %>% 
+  set_mode("classification")
+
+
+set.seed(234)
+
+rf_fit <- 
+  rf_mod %>% 
+  fit(class ~ ., data = cell_train)
+rf_fit
+
+```
+
+```{r training-roc}
+# ROC with training set
+# not a good idea 
+rf_training_pred <- 
+  predict(rf_fit, cell_train) %>% 
+  bind_cols(predict(rf_fit, cell_train, type = "prob")) %>% 
+  # Add the true outcome data back in
+  bind_cols(cell_train %>% 
+              select(class))
+
+rf_training_pred %>%                # training set predictions
+  roc_auc(truth = class, .pred_PS)
+
+rf_training_pred %>%                # training set predictions
+  accuracy(truth = class, .pred_class)
+
+# The model essentially memorizes the training set, resulting in unrealistic accuracy
+
+```
+
+```{r test-roc}
+# ROC with test set
+
+rf_testing_pred <- 
+  predict(rf_fit, cell_test) %>% 
+  bind_cols(predict(rf_fit, cell_test, type = "prob")) %>% 
+  bind_cols(cell_test %>% select(class))
+
+
+rf_testing_pred %>%                   # test set predictions
+  roc_auc(truth = class, .pred_PS)
+
+rf_testing_pred %>%                   # test set predictions
+  accuracy(truth = class, .pred_class)
+
+
+```
+
+```{r resampling}
+set.seed(345)
+
+folds <- vfold_cv(cell_train, v = 10)
+folds
+
+rf_wf <- 
+  workflow() %>%
+  add_model(rf_mod) %>%
+  add_formula(class ~ .)
+
+set.seed(456)
+
+rf_fit_rs <- 
+  rf_wf %>% 
+  fit_resamples(folds)
+
+rf_fit_rs
+
+collect_metrics(rf_fit_rs)
+```
 
 # Ideas
 
