--- a/r_Rmd/October 2021.Rmd
+++ b/r_Rmd/October 2021.Rmd
@@ -647,6 +647,96 @@ final_tree %>%
   vip()
 
 ```
+# 20211018 - More {tidymodels} - [{case study - part 1}](https://www.tidymodels.org/start/case-study/)
+
+```{r setup, include = F}
+p_load(tidymodels, vip)
+
+hotels <- 
+  read_csv('https://tidymodels.org/start/case-study/hotels.csv') %>%
+  mutate_if(is.character, as.factor) 
+
+hotels %>% 
+  count(children) %>% 
+  mutate(prop = n/sum(n))
+
+set.seed(123)
+
+splits      <- initial_split(hotels, strata = children)
+
+hotel_other <- training(splits)
+hotel_test  <- testing(splits)
+
+set.seed(234)
+
+val_set <- validation_split(hotel_other, 
+                            strata = children, 
+                            prop = 0.80)
+```
+
+```{r model-setup, include = F}
+lr_mod <- 
+  logistic_reg(penalty = tune(), mixture = 1) %>% 
+  set_engine("glmnet")
+
+holidays <- c("AllSouls", "AshWednesday", "ChristmasEve", "Easter", 
+              "ChristmasDay", "GoodFriday", "NewYearsDay", "PalmSunday")
+
+lr_recipe <- 
+  recipe(children ~ ., data = hotel_other) %>%  # model formula and data
+  step_date(arrival_date) %>%  # make predictors for year, month, and day of week
+step_holiday(arrival_date, holidays = holidays) %>%  # specify holidays
+  step_rm(arrival_date) %>%  # remove old date column
+  step_dummy(all_nominal(), -all_outcomes()) %>% #create dummy variables for categorical
+  step_zv(all_predictors()) %>% # remove zero variance
+  step_normalize(all_predictors()) # center and scale all predictors
+
+lr_workflow <- 
+  workflow() %>% 
+  add_model(lr_mod) %>% 
+  add_recipe(lr_recipe)
+
+lr_reg_grid <- tibble(penalty = 10^seq(-4, -1, length.out = 30))
+
+
+```
+
+```{r train-model, include = TRUE}
+lr_res <- 
+  lr_workflow %>% 
+  tune_grid(val_set,
+            grid = lr_reg_grid,
+            control = control_grid(save_pred = TRUE),
+            metrics = metric_set(roc_auc))
+
+lr_plot <- 
+  lr_res %>% 
+  collect_metrics() %>% 
+  ggplot(aes(x = penalty, y = mean)) + 
+  geom_point() + 
+  geom_line() + 
+  ylab("Area under the ROC Curve") +
+  scale_x_log10(labels = scales::label_number())
+
+lr_plot 
+
+lr_best <- 
+  lr_res %>% 
+  collect_metrics() %>% 
+  arrange(penalty) %>% 
+  slice(12)
+
+lr_best
+
+lr_auc <- 
+  lr_res %>% 
+  collect_predictions(parameters = lr_best) %>% 
+  roc_curve(children, .pred_children) %>% 
+  mutate(model = "Logistic Regression")
+
+autoplot(lr_auc)
+
+```
 # Ideas
 
 template, tidymodels, rprojroot, rgbif, geoviz, ggmap, rayvista, camcorder, {renv}, {rayvertex}, {labelled}, {hrbrthemes}, {firatheme}, {pwr}, voronoi, {reprex}, {ggdag}, debug = T for geom_text, {lcmm}, {rolldown}, {ggperiodic}, {codebook}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}, {ungeviz}
